--- a/gestione-prenotazioni/src/main/resources/application.properties
+++ b/gestione-prenotazioni/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=gestione-prenotazioni
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/gestionePrenotazioni
+spring.datasource.username=postgres
+spring.datasource.password=Mike.05
