--- a/gestione-prenotazioni/src/main/resources/application.properties
+++ b/gestione-prenotazioni/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=gestione-prenotazioni
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.sql.init.mode=always
-spring.datasource.driverClassName=org.postgresql.Driver
+
 spring.datasource.url=jdbc:postgresql://localhost/gestionePrenotazioni
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.datasource.username=postgres
 spring.datasource.password=Mike.05
